# fusion-finance

./: .gitignore  README.md  pyproject.toml
docs/: api.md
fusion_finance/: __init__.py  ai_client.py  cli.py
fusion_finance/modeling/: __init__.py  advanced.py  engine.py  portfolio.py  valuation.py
fusion_finance/report/: __init__.py  reports.py
fusion_finance/risk/: __init__.py  advanced_risk.py  engine.py
fusion_finance/statements/: __init__.py  analyzer.py
fusion_finance/utils/: __init__.py  audit.py
tests/: __init__.py  test_core.py  test_coverage.py
