[project]
name = "fusion-finance"
version = "0.1.0"
description = "Fusion-Finance — Local AI-powered financial analysis platform. macOS Apple Silicon native, 100% offline, powered by fusion-mlx."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]

[project.scripts]
fusion-finance = "fusion_finance.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["fusion_finance*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"